# sda_prac_ds_adv

./: README.md  train.ipynb
client/: README.md  config.py  main.py  requirements.txt  utils.py
example-app/: CMakeLists.txt  Dockerfile  readme.md
example-app/http/: httplib.h
example-app/src/: main.cpp
example-app/src/models/: banner.cpp  banner.h  hit.cpp  hit.h  utils.cpp  utils.h
example-app/src/service/: server.h  service.cpp  service.h
example-app/tests/: banner.cpp  hit.cpp  service.cpp  torch_example.cpp
